tests/miniJava/neg/000082_mutation.MiniJava
class java { public class java { public static void Main ( String [ ] java ) { { } } } static void Main ( String [ ] java ) { { } } }
